--- a/simulator.html
+++ b/simulator.html
@@ -1,10 +1,11 @@
+
 <!doctype html>
 <html lang="en" manifest="/---simmanifest" data-framework="typescript">
 
 <head>
     <meta charset="utf-8">
     <title>Microsoft MakeCode Arcade Simulator</title>
-    <link rel="stylesheet" type="text/css" href="https://pxt.azureedge.net/blob/bdfc7f775d7167c006b73f1fa400694f7da1036a/sim.css">
+    <link rel="stylesheet" type="text/css" href="https://pxt.azureedge.net/blob/f22e3ed4da1289bf1de8919ae702ec69258e31f1/sim.css">
     <link rel="stylesheet" type="text/css" href="https://pxt.azureedge.net/blob/829ec32a4649358f92bec09c6b049eba4c4121a3/icons.css">
     <style>
         body {
@@ -23,60 +24,125 @@
             -webkit-overflow-scrolling: touch;
         }
 
-        .game-player-msft {
-            display: none !important;
+        #safari-enable-game {
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
+        .safari-enable-game-body {
+            background-color: white;
+            padding: 1.25rem;
+            border-radius: 0.5rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.25rem;
+            z-index: 100;
+            flex-shrink: 1;
+        }
+
+        #safari-enable-game .title {
+            font-weight: 700;
+            font-size: 1.125rem;
+            line-height: 1.75rem;
+        }
+
+        #safari-enable-game div {
+            color: #000000;
+        }
+
+        #safari-enable-game button {
+            cursor: pointer;
+            position: relative;
+            display: inline-block;
+            min-height: 1rem;
+            outline: none;
+            border: none;
+            vertical-align: middle;
+            color: #ffffff;
+            background: #e77038;
+            font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+            margin: 0 0.25rem 0 0;
+            padding: 0.8rem 2rem 0.95rem;
+            text-transform: none;
+            text-shadow: none;
+            font-weight: 400;
+            line-height: 1em;
+            font-style: normal;
+            font-size: 16px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 0.2em;
+            user-select: none;
+            transition: opacity .1s ease,background-color .1s ease,box-shadow .1s ease,color .1s ease,background .1s ease;
+            -webkit-tap-highlight-color: transparent;
+        }
+
+        #safari-enable-game button:hover {
+            filter: grayscale(.15) brightness(.85) contrast(1.3);
+        }
     </style>
-    <script src="https://pxt.azureedge.net/blob/df78ad8b3764856aaf00cc872cc92b0667d13c66/pxtsim.js"></script>
-    <script src="https://pxt.azureedge.net/blob/5e841f672cfdbc196158187269aad7a04095472e/sim.js"></script>
+    <script src="https://pxt.azureedge.net/blob/52ca61031b274517c4b471027de950f9143fdf4c/pxtsim.js"></script>
+    <script src="https://pxt.azureedge.net/blob/2757cae8ff040d5b9432b2327f2904634b4fc0de/sim.js"></script>
 </head>
 
 <body id="root">
-<div id="wrap">
-    <div class="game-player">
-        <div id="debug-stats"></div>
-        <div id="joystick-container" class="game-joystick">
-            <svg xmlns="http://www.w3.org/2000/svg" class="game-joystick-svg" viewBox="1 0 40 40" width="200px"
-                 height="200px">
-                <circle class="joystick-background" cx="20" cy="20" r="16" fill="#397382" stroke="#397382"
+    <div id="wrap">
+        <div class="game-player">
+            <div id="debug-stats"></div>
+            <div id="joystick-container" class="game-joystick">
+                <svg xmlns="http://www.w3.org/2000/svg" class="game-joystick-svg" viewBox="1 0 40 40" width="200px"
+                    height="200px">
+                    <circle class="joystick-background" cx="20" cy="20" r="16" fill="var(--sim-dpad-fill)" stroke="var(--sim-button-stroke)"
                         stroke-width="2" />
-                <rect class="dpad-up" x="16" y="6" width="8" height="12" rx="2" fill="#cecece" stroke="none"
-                      stroke-width="1" />
-                <rect class="dpad-down" x="16" y="22" width="8" height="12" rx="2" fill="#cecece" stroke="none"
-                      stroke-width="1" />
-                <rect class="dpad-right" x="22" y="16" width="12" height="8" ry="2" fill="#cecece" stroke="none"
-                      stroke-width="1" />
-                <rect class="dpad-left" x="6" y="16" width="12" height="8" ry="2" fill="#cecece" stroke="none"
-                      stroke-width="1" />
-                <circle cx="20" cy="20" r="6" fill="#cecece" />
-                <circle class="joystick-handle" cx="20" cy="20" r="6" fill="#333" stroke="#999" stroke-width="2" />
-            </svg>
+                    <rect class="dpad-up" x="16" y="6" width="8" height="12" rx="2" fill="var(--sim-text-color)" stroke="none"
+                        stroke-width="1" />
+                    <rect class="dpad-down" x="16" y="22" width="8" height="12" rx="2" fill="var(--sim-text-color)" stroke="none"
+                        stroke-width="1" />
+                    <rect class="dpad-right" x="22" y="16" width="12" height="8" ry="2" fill="var(--sim-text-color)" stroke="none"
+                        stroke-width="1" />
+                    <rect class="dpad-left" x="6" y="16" width="12" height="8" ry="2" fill="var(--sim-text-color)" stroke="none"
+                        stroke-width="1" />
+                    <circle cx="20" cy="20" r="6" fill="var(--sim-text-color)" />
+                    <circle class="joystick-handle" cx="20" cy="20" r="6" fill="var(--sim-button-fill)" stroke="#999" stroke-width="2" />
+                </svg>
+            </div>
+            <div class="game-embed">
+                <canvas id="game-screen" class="hidden" tabindex="0" role="application"></canvas>
+            </div>
+            <div class="game-sys-button-group">
+                <button class="game-sys-button game-menu-button no-select">Menu</button>
+                <button class="game-sys-button game-reset-button no-select">
+                    <i>
+                    </i>
+                </button>
+            </div>
+            <div id="game-buttons-container" class="game-buttons">
+                <svg xmlns="http://www.w3.org/2000/svg" class="game-button-svg" viewBox="0 0 40 40" width="200px"
+                    height="200px">
+                    <circle class="button-b" cx="13" cy="28" r="9" fill="var(--sim-button-fill)" stroke="var(--sim-button-stroke)" stroke-width="2.5" />
+                    <text class="label-b no-select" x="13" y="28" text-anchor="middle" dy="2.5" font-size="8">B</text>
+                    <circle class="button-a" cx="28" cy="12.5" r="9" fill="var(--sim-button-fill)" stroke="var(--sim-button-stroke)" stroke-width="2.5" />
+                    <text class="label-a no-select" x="28" y="12.5" text-anchor="middle" dy="2.5" font-size="8">A</text>
+                </svg>
+            </div>
+            <div class="game-player-background">
+            </div>
+            <div class="game-player-msft"></div>
         </div>
-        <div class="game-embed">
-            <canvas id="game-screen" class="hidden"></canvas>
+        <div id="safari-enable-game" style="display: none">
+            <div class="safari-enable-game-body">
+                <div class="title">Game Paused</div>
+                <div class="body">Click to start the game</div>
+                <button>Start Game</button>
+            </div>
         </div>
-        <div class="game-sys-button-group">
-            <button class="game-sys-button game-menu-button no-select">Menu</button>
-            <button class="game-sys-button game-reset-button no-select">
-                <i>
-                </i>
-            </button>
-        </div>
-        <div id="game-buttons-container" class="game-buttons">
-            <svg xmlns="http://www.w3.org/2000/svg" class="game-button-svg" viewBox="0 0 40 40" width="200px"
-                 height="200px">
-                <circle class="button-b" cx="13" cy="28" r="9" fill="#333" stroke="#397382" stroke-width="2.5" />
-                <text class="label-b no-select" x="13" y="28" text-anchor="middle" dy="2.5" font-size="8">B</text>
-                <circle class="button-a" cx="28" cy="12.5" r="9" fill="#333" stroke="#397382" stroke-width="2.5" />
-                <text class="label-a no-select" x="28" y="12.5" text-anchor="middle" dy="2.5" font-size="8">A</text>
-            </svg>
-        </div>
-        <div class="game-player-background">
-        </div>
-        <div class="game-player-msft"></div>
     </div>
-</div>
 </body>
 
 </html>
