--- a/simulator.html
+++ b/simulator.html
@@ -24,6 +24,10 @@
             -webkit-overflow-scrolling: touch;
         }
 
+        .game-player-msft {
+            display: none;
+        }
+
         #safari-enable-game {
             position: absolute;
             left: 0;
