Prevent the controller moving upon tilt

--- a/simulator.html
+++ b/simulator.html
@@ -91,7 +91,8 @@
         }
     </style>
     <script src="https://pxt.azureedge.net/blob/105c9c31ff58e09922b7f206bf84c4def8a82aa9/pxtsim.js"></script>
-    <script src="https://pxt.azureedge.net/blob/bfcefabb126b191a7594d24c37812dd1e3ca8b68/sim.js"></script>
+<!--    <script src="https://pxt.azureedge.net/blob/bfcefabb126b191a7594d24c37812dd1e3ca8b68/sim.js"></script>-->
+    <script src="/simulator.js"></script>
 </head>
 
 <body id="root">
